discussion/kv_engine/150870/150870_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

CBD-3928: Update existing license headers to BSL (other)

Change-Id: I201a50f015626d15804d780b3078de31b520722b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Blair Watt
Date: 2021-04-09 15:25:18.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-09 16:14:04.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8284/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:14:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8284/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:14:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8284/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29941/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34884/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6829/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17721/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9942/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9805/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8873/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10173/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-04-12 14:42:49.000000000
Message: 
Patch Set 1: Code-Review+1

(1 comment)
Line:21, .copyrightignore -> I don't really understand why we want to ignore everything under these directories?

I would have thought that at the end all files should have correct headers?

----------------------------------------------------------------------------------------------------------------------
